# client

./: .gitignore  Cargo.toml  Projects for Experiential Reflections on Technology.code-workspace  README.md  config.yml
.github/workflows/: build.yml  exp1build.yml  exp2build.yml  rust.yml
explore1/: Cargo.toml  README.md  config.yml
explore1/src/: config.rs  lib.rs  main.rs  map.rs  player.rs
explore2/: Cargo.toml  README.md  config.yml
explore2/src/: components.rs  config.rs  game.rs  gui.rs  items.rs  lib.rs  logger.rs  main.rs  map.rs  monster.rs  physics.rs  player.rs  rooms.rs  visibility_system.rs
explore2/src/ai/: monster.rs
explore2/src/combat/: damage.rs  melee.rs  mod.rs
explore2/src/game/: log.rs  mod.rs  persistence.rs  state.rs  world.rs
explore2/src/gui/: gui.rs  mod.rs  tooltips.rs
explore2/src/gui/menus/: item.rs  main.rs  mod.rs  target.rs
explore2/src/items/: mod.rs  potions.rs  scrolls.rs
explore2/src/player/: character.rs  inventory.rs  user.rs
final/: README.md
src/: components.rs  damage_system.rs  gamesystem.rs  lib.rs  main.rs  map.rs  physics.rs  player.rs  random_table.rs  rect.rs  rex_assets.rs  rng.rs  saveload_system.rs  spawner.rs
src/ai/: mod.rs
src/combat/: melee.rs
src/effects/: damage.rs  hunger.rs  mod.rs  movement.rs  particles.rs  targeting.rs  triggers.rs
src/game/: mod.rs  persistence.rs  state.rs
src/gamelog/: builder.rs  events.rs  logstore.rs  mod.rs
src/gui/: cheat_menu.rs  drop_item_menu.rs  game_over_menu.rs  gui.rs  hud.rs  identify_menu.rs  inventory_menu.rs  item_render.rs  main_menu.rs  menus.rs  mod.rs  ranged_target.rs  remove_curse_menu.rs  remove_item_menu.rs  tooltips.rs  vendor_menu.rs
src/items/: items.rs  potions.rs  scrolls.rs
src/map/: camera.rs  dungeon.rs  mod.rs  themes.rs  tiletype.rs
src/map_builders/: area_ending_point.rs  area_starting_points.rs  bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  common.rs  cull_unreachable.rs  distant_exit.rs  dla.rs  door_placement.rs  drunkard.rs  dwarf_fort_builder.rs  forest.rs  limestone_cavern.rs  maze.rs  mod.rs
src/player/: character.rs  mod.rs  user.rs
src/raws/: faction_structs.rs  item_structs.rs  mob_structs.rs  mod.rs  rawmaster.rs
src/systems/: hunger_system.rs  lighting_system.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  movement_system.rs  particle_system.rs  ranged_combat_system.rs  trigger_system.rs  visibility_system.rs
(+29 files in other folders)
