[package]
name = "hxgm30-client"
description = "An ASCII client for exploring hexagram30 worlds, based upon rustrogueliketutorial"
version = "0.3.0-alpha.01"
authors = ["Duncan McGreggor <duncan@cnbb.games>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/hexagram30/client"

[lib]
name = "hxgm30client"

[dependencies]
config = "0.10.1"
log = "0.4.6"
#rltk = { version = "0.6.2", default-features = false, features = ["crossterm"] }
#rltk = { version = "0.6.2", default-features = false, features = ["curses"] }
rltk = { version = "0.7.0", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.0"
serde_json = "1.0.39"
twyg = "0.1.7"
