[package]
name = "hxgm30-client"
description = "An ASCII client for exploring hexagram30 worlds, based upon rustrogueliketutorial"
version = "0.4.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>", "Duncan McGreggor <duncan@cnbb.games>"]
license = "MIT"
repository = "https://github.com/hexagram30/client"
edition = "2018"

[lib]
name = "hxgm30client"

[dependencies]
rltk = { version = "0.7.0", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.0"
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
lazy_static = "1.4.0"
regex = "1.3.1"
