[package]
name = "explore2"
version = "0.1.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
edition = "2018"

[lib]
name = "explore2"

[dependencies]
config = "0.10.1"
log = "0.4.6"
rltk = "0.6.2"
serde = { version = "1.0.104", features = ["derive"] }
specs = "0.15.1"
specs-derive = "0.4.0"
twyg = "0.1.3"
