[package]
name = "explore2"
version = "0.2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
edition = "2018"

[lib]
name = "explore2"

[dependencies]
config = "0.10.1"
log = "0.4.6"
#rltk = { version = "0.6.2", default-features = false, features = ["crossterm"] }
#rltk = { version = "0.6.2", default-features = false, features = ["curses"] }
rltk = { version = "0.7.0", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.0"
serde_json = "1.0.39"
twyg = "0.1.7"
